--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,3 +1,66 @@
+.projects {
+    border: 1px solid red;
+    margin: 80px 0;
+}
+
+.projects__header {
+    border: 1px solid palegreen;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.projects__title {
+    font-weight: 700;
+    font-size: 40px;
+    color: $white;
+}
+
+.projects__contact {
+    margin: 0;
+}
+
+.project {
+    border: 1px solid hotpink;
+    margin-top: 40px;
+    text-align: start;
+}
+
+.project__thumbnail {
+    width: 100%;
+    height: 253px;
+    margin-bottom: 20px;
+}
+
+.project__title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    color: $white;
+    margin-bottom: 7px;
+}
+
 .project__skill {
-    word-spacing: 1rem;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    word-spacing: 18px;
+    color: $grey;
+    margin-bottom: 20px;
+}
+
+.project__urls {
+    border: 1px solid red;
+    height: 38px;
+}
+
+.project__url {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+    border-bottom: 2px solid $green;
+    color: $white;
+    padding-bottom: 10px;
+    margin-right: 30px;
 }
