--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #151515;
+  background: linear-gradient(to bottom, #151515 0%, #151515 81.5%, #242424 81.5%, #242424 100%);
   border: 1px solid rgb(65, 225, 134);
 }
 
@@ -17,6 +17,10 @@ body {
   text-align: center;
   font-family: "Space Grotesk";
   background: no-repeat top 124px right 187px url("../assets/images/pattern-rings.svg"), no-repeat top 254px left 311px url("../assets/images/pattern-circle.svg");
+}
+
+.line {
+  border: 1px solid #FFFFFF;
 }
 
 @font-face {
@@ -50,7 +54,7 @@ body {
 }
 
 .header {
-  margin-top: 40px;
+  margin: 40px 0 80px;
   border: 1px solid salmon;
 }
 
@@ -88,6 +92,159 @@ body {
   padding-bottom: 10px;
 }
 
+.skills {
+  border: 1px solid mediumaquamarine;
+  margin: 40px 0 16px;
+}
+
+.skill {
+  border: 1px solid mediumaquamarine;
+  margin-bottom: 24px;
+}
+
+.skill__title {
+  font-weight: 700;
+  font-size: 32px;
+  color: #FFFFFF;
+  letter-spacing: -1px;
+}
+
+.skill__experience {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: #D9D9D9;
+}
+
+.projects {
+  border: 1px solid red;
+  margin: 80px 0;
+}
+
+.projects__header {
+  border: 1px solid palegreen;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.projects__title {
+  font-weight: 700;
+  font-size: 40px;
+  color: #FFFFFF;
+}
+
+.projects__contact {
+  margin: 0;
+}
+
+.project {
+  border: 1px solid hotpink;
+  margin-top: 40px;
+  text-align: start;
+}
+
+.project__thumbnail {
+  width: 100%;
+  height: 253px;
+  margin-bottom: 20px;
+}
+
+.project__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFFFFF;
+  margin-bottom: 7px;
+}
+
 .project__skill {
-  word-spacing: 1rem;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  word-spacing: 18px;
+  color: #D9D9D9;
+  margin-bottom: 20px;
+}
+
+.project__urls {
+  border: 1px solid red;
+  height: 38px;
+}
+
+.project__url {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  border-bottom: 2px solid #4EE1A0;
+  color: #FFFFFF;
+  padding-bottom: 10px;
+  margin-right: 30px;
+}
+
+.contact {
+  margin-bottom: 87px;
+}
+
+.contact__header {
+  font-weight: 700;
+  font-size: 40px;
+  color: #FFFFFF;
+  margin-top: 60px;
+}
+
+.contact__text {
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: #D9D9D9;
+}
+
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.contact__details,
+textarea {
+  border: none;
+  border-bottom: 1px solid #FFFFFF;
+  background-color: transparent;
+  outline: none;
+  margin-bottom: 32px;
+  padding: 17px 24px;
+  font-weight: 500;
+  font-size: 16px;
+  color: #D9D9D9;
+}
+
+.contact__details::placeholder,
+textarea::placeholder {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  font-family: "Space Grotesk";
+}
+
+.contact__submit {
+  font-family: "Space Grotesk";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 2.29px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  width: fit-content;
+  border-bottom: 2px solid #4EE1A0;
+  padding-bottom: 10px;
+  margin-left: auto;
+}
+
+.footer {
+  margin: 40px auto 60px;
 }/*# sourceMappingURL=app.css.map */
