--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -101,6 +101,11 @@ body {
   padding-bottom: 10px;
 }
 
+.contact-me:hover {
+  cursor: pointer;
+  color: #4EE1A0;
+}
+
 .skills {
   border: 1px solid mediumaquamarine;
   margin: 40px 0 16px;
@@ -193,11 +198,16 @@ body {
   text-decoration: none;
 }
 
+.project__url:hover {
+  cursor: pointer;
+  color: #4EE1A0;
+}
+
 .contact {
   margin-bottom: 87px;
 }
 
-.contact__header {
+.contact__title {
   font-weight: 700;
   font-size: 40px;
   color: #FFFFFF;
@@ -216,10 +226,10 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 50px;
+  position: relative;
 }
 
-.contact__details,
-textarea {
+.contact__detail {
   border: none;
   border-bottom: 1px solid #FFFFFF;
   background-color: transparent;
@@ -228,15 +238,58 @@ textarea {
   padding: 17px 24px;
   font-weight: 500;
   font-size: 16px;
-  color: #D9D9D9;
+  color: #FFFFFF;
 }
 
-.contact__details::placeholder,
+.contact__detail::placeholder,
 textarea::placeholder {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
   font-family: "Space Grotesk";
+}
+
+.name:focus,
+.email:focus,
+.message:focus {
+  border-bottom: 1px solid #4EE1A0;
+  background-color: transparent;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 40px #242424 inset;
+  -webkit-text-fill-color: #FFFFFF;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.email--error {
+  border-bottom: 1px solid #FF6F5B;
+  margin-bottom: 0;
+  background-color: transparent;
+}
+
+.email__validation--exclamation {
+  border: 1px solid #FF6F5B;
+  border-radius: 50px;
+  width: 24px;
+  height: 24px;
+  color: #FF6F5B;
+  position: absolute;
+  top: 100px;
+  right: 0;
+}
+
+.email__validation--error {
+  font-weight: 500;
+  font-size: 12px;
+  color: #FF6F5B;
+  margin-left: auto;
+  margin-top: 5px;
+  margin-bottom: 11px;
 }
 
 .contact__submit {
