--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,7 @@ $darkGrey: #242424;
 $grey: #D9D9D9;
 $white: #FFFFFF;
 $green: #4EE1A0;
+$red: #FF6F5B;
 $patternCircle: url("../assets/images/pattern-circle.svg");
 $patternRings: url("../assets/images/pattern-rings.svg");
 
