--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,19 +1,19 @@
-.header {
-    margin: 40px 0 80px;
-    border: 1px solid salmon;
+.hero {
+    margin-top: 331px;
 }
 
-.header__intro {
+.hero__intro {
     font-weight: 700;
-    font-size: 38px;
+    font-size: 40px;
+    line-height: 40px;
     color: $white;
 }
 
-.header__intro--name {
+.hero__intro--name {
     border-bottom: 4px solid $green;
 }
 
-.header__text {
+.hero__text {
     margin-top: 24px;
     font-weight: 500;
     font-size: 16px;
@@ -21,7 +21,7 @@
     color: $grey;
 }
 
-.header__contact,
+.hero__contact,
 .contact-me {
     margin-top: 24px;
     font-weight: 700;
@@ -40,4 +40,20 @@
 .contact-me:hover {
     cursor: pointer;
     color: $green;
+}
+
+@media(min-width:700px) {
+    .hero {
+        margin: 90px 0 0;
+        text-align: left;
+    }
+
+    .hero__intro {
+        font-size: 72px;
+        line-height: 72px;
+    }
+
+    .hero__intro--name {
+        border-bottom: 6px solid $green;
+    }
 }
