--- a/src/styles/_icons.scss
+++ b/src/styles/_icons.scss
@@ -1,19 +1,8 @@
-.banner {
-    margin: 0 auto;
-    border: 1px solid $green;
-    width: 174px;
-}
-
-.banner__logo {
-    font-weight: 700;
-    font-size: 24px;
-    color: $white;
-}
-
 .banner__icons {
     border: 1px solid rebeccapurple;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 20px;
 }
 
@@ -25,4 +14,18 @@
 .icon__link:hover {
     cursor: pointer;
     fill: $green;
+}
+
+@media(min-width:700px) {
+    .banner {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .banner__icons {
+        margin-top: 0;
+        width: 200px;
+    }
 }
