--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,11 +1,26 @@
-$photoMB: url('../assets/images/image-profile-mobile.webp');
-$photoTB: url('../assets/images/image-profile-tablet.webp');
-$photoDT: url('../assets/images/image-profile-desktop.webp');
+.banner {
+    margin: 20px auto 0px;
+    border: 1px solid $green;
+    width: 174px;
+}
 
+.banner__logo {
+    font-weight: 700;
+    font-size: 24px;
+    color: $white;
+}
 
-.nav {
-    background: $photoMB;
-    height: 383px;
-    background-size: 100%;
-    padding: 20px 10px;
+@media(min-width:700px) {
+    .banner {
+        width: 100%;
+        margin-top: 29px;
+        padding: 0 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .banner__logo {
+        font-size: 32px;
+    }
 }
