--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,12 +1,11 @@
 .contact {
-    margin-bottom: 87px;
+    margin: 60px 0 87px;
 }
 
 .contact__title {
     font-weight: 700;
     font-size: 40px;
     color: $white;
-    margin-top: 60px;
 }
 
 .contact__text {
