--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,35 +10,30 @@ body {
 }
 
 .App {
-  border: 1px solid red;
   margin: 0 auto;
-  padding: 0 16px;
-  max-width: 375px;
+  padding: 20px 16px 0;
+  min-width: 375px;
+  max-width: 500px;
   text-align: center;
   font-family: "Space Grotesk";
-  background: no-repeat top 124px right 187px url("../assets/images/pattern-rings.svg"), no-repeat top 254px left 311px url("../assets/images/pattern-circle.svg"), no-repeat top 1320px left 189px url("../assets/images/pattern-rings.svg"), no-repeat bottom 220px right 189px url("../assets/images/pattern-rings.svg");
-}
-
-.header {
-  background: no-repeat top center url("../assets/images/image-profile-mobile.webp");
-  background-size: 174px 383px;
-  margin-bottom: 80px;
+  background: no-repeat top center url("../assets/images/image-profile-mobile.webp"), no-repeat top 124px right 187px url("../assets/images/pattern-rings.svg"), no-repeat top 254px left 311px url("../assets/images/pattern-circle.svg"), no-repeat top 1320px left 189px url("../assets/images/pattern-rings.svg"), no-repeat bottom 220px right 189px url("../assets/images/pattern-rings.svg");
+  background-size: 174px 383px, auto, auto, auto, auto;
 }
 
 .line {
   border: 1px solid #FFFFFF;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 768px) {
   .App {
-    min-width: 700px;
-    border: 1px solid red;
-    padding: 0 30px;
+    min-width: 768px;
+    padding: 30px 30px 0;
+    border: 1px solid rgb(65, 225, 134);
+    background: no-repeat top 86px right 503px url("../assets/images/pattern-rings.svg"), no-repeat top 471px left 702px url("../assets/images/pattern-circle.svg"), no-repeat top 1320px left 189px url("../assets/images/pattern-rings.svg"), no-repeat bottom 220px right 189px url("../assets/images/pattern-rings.svg"), no-repeat top right url("../assets/images/image-profile-tablet.webp");
+    background-size: auto, auto, auto, auto, 322px 600px;
   }
-  .header {
-    background: no-repeat top right url("../assets/images/image-profile-tablet.webp");
-    background-size: 322px 600px;
-    margin: 0 -30px 60px 0;
+  .middle-line {
+    display: none;
   }
 }
 @media (min-width: 1000px) {
@@ -58,7 +53,7 @@ body {
   src: url(../assets/fonts/SpaceGrotesk-VariableFont_wght.ttf);
 }
 .banner {
-  margin: 20px auto 0px;
+  margin: 0px auto;
   border: 1px solid #4EE1A0;
   width: 174px;
 }
@@ -69,11 +64,10 @@ body {
   color: #FFFFFF;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 768px) {
   .banner {
+    border: 1px solid rebeccapurple;
     width: 100%;
-    margin-top: 29px;
-    padding: 0 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -113,7 +107,8 @@ body {
   }
 }
 .hero {
-  margin-top: 331px;
+  margin: 331px 0 80px;
+  border: 1px solid rosybrown;
 }
 
 .hero__intro {
@@ -156,17 +151,27 @@ body {
   color: #4EE1A0;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 768px) {
   .hero {
-    margin: 90px 0 0;
+    margin: 90px 0 60px;
+    width: 445px;
     text-align: left;
   }
   .hero__intro {
     font-size: 72px;
     line-height: 72px;
+    letter-spacing: -2.05px;
   }
   .hero__intro--name {
     border-bottom: 6px solid #4EE1A0;
+  }
+  .hero__text {
+    margin-top: 60px;
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .hero__contact {
+    margin-top: 34px;
   }
 }
 .skills {
@@ -193,13 +198,36 @@ body {
   color: #D9D9D9;
 }
 
+@media (min-width: 768px) {
+  .skills {
+    margin: 52px 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .skill {
+    width: 345px;
+    text-align: left;
+    margin-bottom: 52px;
+  }
+  .skill__title {
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: -1.5px;
+    margin-bottom: 14px;
+  }
+  .skill__experience {
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
 .projects {
-  border: 1px solid red;
   margin: 80px 0;
+  border: 1px solid floralwhite;
 }
 
 .projects__header {
-  border: 1px solid palegreen;
   padding: 0;
   display: flex;
   justify-content: space-between;
@@ -217,7 +245,6 @@ body {
 }
 
 .project {
-  border: 1px solid hotpink;
   margin-top: 40px;
   text-align: start;
 }
@@ -246,7 +273,6 @@ body {
 }
 
 .project__urls {
-  border: 1px solid red;
   height: 38px;
 }
 
@@ -266,15 +292,31 @@ body {
   color: #4EE1A0;
 }
 
+@media (min-width: 768px) {
+  .projects {
+    margin-top: 48px;
+  }
+  .projects__title {
+    font-weight: 72px;
+  }
+  .project-contents {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .project {
+    width: 342px;
+  }
+}
 .contact {
-  margin-bottom: 87px;
+  margin: 60px 0 87px;
 }
 
 .contact__title {
   font-weight: 700;
   font-size: 40px;
   color: #FFFFFF;
-  margin-top: 60px;
 }
 
 .contact__text {
@@ -369,9 +411,4 @@ input:-webkit-autofill:active {
   border-bottom: 2px solid #4EE1A0;
   padding-bottom: 10px;
   margin-left: auto;
-}
-
-.footer {
-  margin: 40px auto 60px;
-  border: 1px solid salmon;
 }/*# sourceMappingURL=app.css.map */
