--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
     margin: 331px 0 80px;
-    border: 1px solid rosybrown;
 }
 
 .hero__intro {
@@ -11,7 +10,9 @@
 }
 
 .hero__intro--name {
-    border-bottom: 4px solid $green;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-color: $green;
 }
 
 .hero__text {
@@ -46,7 +47,7 @@
 @media(min-width:768px) {
     .hero {
         margin: 90px 0 60px;
-        width: 445px;
+        max-width: 445px;
         text-align: left;
     }
 
@@ -57,7 +58,7 @@
     }
 
     .hero__intro--name {
-        border-bottom: 6px solid $green;
+        text-underline-offset: 14.5px;
     }
 
     .hero__text {
@@ -68,5 +69,30 @@
 
     .hero__contact {
         margin-top: 34px;
+    }
+}
+
+@media(min-width:1400px) {
+    .hero {
+        margin: 127px 0 219px;
+        max-width: 706px;
+    }
+
+    .hero__intro {
+        font-size: 88px;
+        letter-spacing: -2.5px;
+    }
+
+    .hero__intro--name {
+        text-underline-offset: 18px;
+    }
+
+    .hero__text {
+        margin-top: 43px;
+        width: 445px;
+    }
+
+    .hero__contact {
+        margin-top: 66px;
     }
 }
