--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -49,3 +49,13 @@
         line-height: 28px;
     }
 }
+
+@media(min-width:1400px) {
+    .skills {
+        margin: 58px 0 0;
+    }
+
+    .skill {
+        margin-bottom: 58px;
+    }
+}
