--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,13 +11,13 @@ body {
 
 .App {
   margin: 0 auto;
-  padding: 20px 16px 0;
+  padding: 20px 16px 80px;
   min-width: 375px;
   max-width: 500px;
   text-align: center;
   font-family: "Space Grotesk";
-  background: no-repeat top center url("../assets/images/image-profile-mobile.webp"), no-repeat top 124px right 187px url("../assets/images/pattern-rings.svg"), no-repeat top 254px left 311px url("../assets/images/pattern-circle.svg"), no-repeat top 1320px left 189px url("../assets/images/pattern-rings.svg"), no-repeat bottom 220px right 189px url("../assets/images/pattern-rings.svg");
-  background-size: 174px 383px, auto, auto, auto, auto;
+  background: no-repeat top 254px left 311px url("../assets/images/pattern-circle.svg"), no-repeat top center url("../assets/images/image-profile-mobile.webp"), no-repeat top 124px right 187px url("../assets/images/pattern-rings.svg"), no-repeat top 1320px left 189px url("../assets/images/pattern-rings.svg"), no-repeat bottom 220px right 189px url("../assets/images/pattern-rings.svg");
+  background-size: auto, 174px 383px, auto, auto, auto;
 }
 
 .line {
@@ -27,25 +27,21 @@ body {
 @media (min-width: 768px) {
   .App {
     min-width: 768px;
-    padding: 30px 30px 0;
-    border: 1px solid rgb(65, 225, 134);
-    background: no-repeat top 86px right 503px url("../assets/images/pattern-rings.svg"), no-repeat top 471px left 702px url("../assets/images/pattern-circle.svg"), no-repeat top 1320px left 189px url("../assets/images/pattern-rings.svg"), no-repeat bottom 220px right 189px url("../assets/images/pattern-rings.svg"), no-repeat top right url("../assets/images/image-profile-tablet.webp");
+    padding: 30px 30px 40px;
+    background: no-repeat top 86px right 503px url("../assets/images/pattern-rings.svg"), no-repeat top 471px left 702px url("../assets/images/pattern-circle.svg"), no-repeat top 1047px left 570px url("../assets/images/pattern-rings.svg"), no-repeat bottom 130px right 606px url("../assets/images/pattern-rings.svg"), no-repeat top right url("../assets/images/image-profile-tablet.webp");
     background-size: auto, auto, auto, auto, 322px 600px;
   }
   .middle-line {
     display: none;
   }
 }
-@media (min-width: 1000px) {
+@media (min-width: 1400px) {
   .App {
-    min-width: 1000px;
+    min-width: 1440px;
     border: 1px solid red;
-    padding: 0 165px;
-  }
-  .header {
-    background: no-repeat top right url("../assets/images/image-profile-desktop.webp");
-    background-size: 445px 720px;
-    margin: 0 -165px 104px -165px;
+    padding: 40px 165px 92px 160px;
+    background: no-repeat top 86px right 503px url("../assets/images/pattern-rings.svg"), no-repeat top 471px left 702px url("../assets/images/pattern-circle.svg"), no-repeat top 1047px left 570px url("../assets/images/pattern-rings.svg"), no-repeat bottom 130px right 606px url("../assets/images/pattern-rings.svg"), no-repeat top left 835px url("../assets/images/image-profile-desktop.webp");
+    background-size: auto, auto, auto, auto, 445px 720px;
   }
 }
 @font-face {
@@ -74,6 +70,11 @@ body {
   }
   .banner__logo {
     font-size: 32px;
+  }
+}
+@media (min-width: 1400px) {
+  .nav {
+    padding-right: 30px;
   }
 }
 .banner__icons {
@@ -108,7 +109,6 @@ body {
 }
 .hero {
   margin: 331px 0 80px;
-  border: 1px solid rosybrown;
 }
 
 .hero__intro {
@@ -119,7 +119,9 @@ body {
 }
 
 .hero__intro--name {
-  border-bottom: 4px solid #4EE1A0;
+  text-decoration: underline;
+  text-underline-offset: 8px;
+  text-decoration-color: #4EE1A0;
 }
 
 .hero__text {
@@ -154,7 +156,7 @@ body {
 @media (min-width: 768px) {
   .hero {
     margin: 90px 0 60px;
-    width: 445px;
+    max-width: 445px;
     text-align: left;
   }
   .hero__intro {
@@ -163,7 +165,7 @@ body {
     letter-spacing: -2.05px;
   }
   .hero__intro--name {
-    border-bottom: 6px solid #4EE1A0;
+    text-underline-offset: 14.5px;
   }
   .hero__text {
     margin-top: 60px;
@@ -172,6 +174,26 @@ body {
   }
   .hero__contact {
     margin-top: 34px;
+  }
+}
+@media (min-width: 1400px) {
+  .hero {
+    margin: 127px 0 219px;
+    max-width: 706px;
+  }
+  .hero__intro {
+    font-size: 88px;
+    letter-spacing: -2.5px;
+  }
+  .hero__intro--name {
+    text-underline-offset: 18px;
+  }
+  .hero__text {
+    margin-top: 43px;
+    width: 445px;
+  }
+  .hero__contact {
+    margin-top: 66px;
   }
 }
 .skills {
@@ -220,6 +242,14 @@ body {
   .skill__experience {
     font-size: 18px;
     line-height: 28px;
+  }
+}
+@media (min-width: 1400px) {
+  .skills {
+    margin: 58px 0 0;
+  }
+  .skill {
+    margin-bottom: 58px;
   }
 }
 .projects {
@@ -307,6 +337,14 @@ body {
   }
   .project {
     width: 342px;
+  }
+}
+@media (min-width: 1400px) {
+  .projects {
+    margin-top: 82px;
+  }
+  .projects__title {
+    font-weight: 88px;
   }
 }
 .contact {
@@ -411,4 +449,36 @@ input:-webkit-autofill:active {
   border-bottom: 2px solid #4EE1A0;
   padding-bottom: 10px;
   margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .contact {
+    margin: 100px 130px 92px;
+    border: 1px solid red;
+  }
+  .contact__title {
+    margin-top: 60px;
+    font-size: 72px;
+  }
+  .contact__text {
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .contact__form {
+    margin-top: 48px;
+  }
+}
+.footer {
+  margin-top: 40px;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    margin-top: 30px;
+  }
+}
+@media (min-width: 1000px) {
+  .footer {
+    margin-top: 47px;
+  }
 }/*# sourceMappingURL=app.css.map */
