--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -20,14 +20,21 @@
     margin: 0;
 }
 
+.project-contents {
+    border: 1px solid palegreen;
+    text-align: left;
+}
+
 .project {
+    border: 1px solid rgb(169, 152, 251);
     margin-top: 40px;
-    text-align: start;
+    min-width: 343px;
 }
 
 .project__thumbnail {
     width: 100%;
-    height: 253px;
+    min-height: 253px;
+    max-height: 350px;
     margin-bottom: 20px;
 }
 
@@ -42,7 +49,7 @@
 .project__skill {
     font-weight: 500;
     font-size: 18px;
-    line-height: 18px;
+    line-height: 28px;
     word-spacing: 18px;
     color: $grey;
     margin-bottom: 20px;
@@ -56,6 +63,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 26px;
+    letter-spacing: 2.29px;
     border-bottom: 2px solid $green;
     color: $white;
     padding-bottom: 10px;
@@ -85,7 +93,7 @@
     }
 
     .project {
-        width: 342px;
+        max-width: 342px;
     }
 }
 
@@ -96,5 +104,46 @@
 
     .projects__title {
         font-weight: 88px;
+    }
+
+    .project-contents {
+        border: 1px solid fuchsia;
+        padding-top: 10px;
+    }
+
+    .project {
+        margin-top: 70px;
+        border: 1px solid palegoldenrod;
+        min-width: 540px;
+        position: relative;
+    }
+
+    .project__thumbnail {
+        max-width: 540px;
+        min-height: 400px;
+    }
+
+    .project__urls {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 400px;
+        mix-blend-mode: normal;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: space-between;
+        background-color: black;
+        opacity: 0;
+    }
+
+    .project__urls:hover {
+        opacity: 0.75;
+        cursor: pointer;
+    }
+
+    .project__url {
+        margin: 24px auto 24px;
     }
 }
