--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -274,14 +274,21 @@ body {
   margin: 0;
 }
 
+.project-contents {
+  border: 1px solid palegreen;
+  text-align: left;
+}
+
 .project {
+  border: 1px solid rgb(169, 152, 251);
   margin-top: 40px;
-  text-align: start;
+  min-width: 343px;
 }
 
 .project__thumbnail {
   width: 100%;
-  height: 253px;
+  min-height: 253px;
+  max-height: 350px;
   margin-bottom: 20px;
 }
 
@@ -296,7 +303,7 @@ body {
 .project__skill {
   font-weight: 500;
   font-size: 18px;
-  line-height: 18px;
+  line-height: 28px;
   word-spacing: 18px;
   color: #D9D9D9;
   margin-bottom: 20px;
@@ -310,6 +317,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 26px;
+  letter-spacing: 2.29px;
   border-bottom: 2px solid #4EE1A0;
   color: #FFFFFF;
   padding-bottom: 10px;
@@ -336,7 +344,7 @@ body {
     flex-wrap: wrap;
   }
   .project {
-    width: 342px;
+    max-width: 342px;
   }
 }
 @media (min-width: 1400px) {
@@ -345,6 +353,41 @@ body {
   }
   .projects__title {
     font-weight: 88px;
+  }
+  .project-contents {
+    border: 1px solid fuchsia;
+    padding-top: 10px;
+  }
+  .project {
+    margin-top: 70px;
+    border: 1px solid palegoldenrod;
+    min-width: 540px;
+    position: relative;
+  }
+  .project__thumbnail {
+    max-width: 540px;
+    min-height: 400px;
+  }
+  .project__urls {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    mix-blend-mode: normal;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    background-color: black;
+    opacity: 0;
+  }
+  .project__urls:hover {
+    opacity: 0.75;
+    cursor: pointer;
+  }
+  .project__url {
+    margin: 24px auto 24px;
   }
 }
 .contact {
@@ -466,6 +509,27 @@ input:-webkit-autofill:active {
   }
   .contact__form {
     margin-top: 48px;
+  }
+}
+@media (min-width: 1400px) {
+  .contact {
+    margin: 223px 0 92px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .contact__header {
+    border: 1px solid rebeccapurple;
+    text-align: left;
+    max-width: 445px;
+  }
+  .contact__title {
+    margin-top: 0;
+    font-size: 88px;
+  }
+  .contact__form {
+    margin-top: 0;
+    max-width: 455px;
   }
 }
 .footer {
