--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-    margin: 60px 0 87px;
+    margin: 140px 0 87px;
 }
 
 .contact__title {
@@ -107,7 +107,6 @@ input:-webkit-autofill:active {
 @media(min-width:768px) {
     .contact {
         margin: 100px 130px 92px;
-        border: 1px solid red;
     }
 
     .contact__title {
@@ -134,7 +133,6 @@ input:-webkit-autofill:active {
     }
 
     .contact__header {
-        border: 1px solid rebeccapurple;
         text-align: left;
         max-width: 445px;
     }
@@ -146,10 +144,6 @@ input:-webkit-autofill:active {
 
     .contact__form {
         margin-top: 0;
-        max-width: 455px;
-    }
-
-    .contact__detail {
-        // padding: 0;
+        min-width: 445px;
     }
 }
